# ArmorDetect_CV

./: CMakeLists.txt  README.md
config/: demo.yaml
include/: armor.hpp
io/: communication.cpp  communication.hpp
models/: info.md
src/: 9.11-4corner-changelog.md  main.cpp
tasks/: aimer.cpp  aimer.hpp  detector.cpp  detector.hpp  ekf.cpp  pnp_solver.cpp  pnp_solver.hpp  ros2_manager.cpp  ros2_manager.hpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp  trajectory_normal.cpp  trajectory_rk4.cpp  trajectory_rk4.hpp
test/: ablation_analysis.py  ablation_study_test.cpp  auto_aim_vedio_test.cpp  camera_auto_aim_test.cpp  detect_test.cpp  draw.cpp  imu_test.cpp  model_comparison_plot.py  model_comparison_test.cpp
test/utils/: draw.cpp  draw.hpp  usb_connect.cpp
tools/: img_tools.cpp  img_tools.hpp
